--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
     <a href="#">Servicios</a>
     <a href="#">Contacto</a>
     <a href="#">Noticias</a>
-    <a href="https://www.utp.edu.pe"> <img src="C:\Users\gerardo\Pictures\utp.png" alt="UTP-ICON"></a>
+    <a href="https://www.utp.edu.pe"> <img src="./assets/images/bg8.png" alt="UTP-ICON"></a>
 </div>
 
 <main>
@@ -82,7 +82,7 @@
                     <form action="" class="formulario__register">
                       <!-- <div style="margin-left: 400px;" class=" bg-red-300 p-10"> -->
                         <div class=" flex justify-center">
-                              <img src="/src/assets/images/bg9.jpg" alt="Legion" class=" mr-14">
+                              <img src="./assets/images/bg9.jpg" alt="Legion" class=" mr-14">
                         </div>
                     <!-- </div> -->
                     
